[package]
name = "nanofb"
version = "0.1.0"
edition = "2024"
description = "nanofb is a small cross platform libary that offers a simple way to render pixels in a window."
license = "MIT"

[dependencies]
bytemuck = { version = "1.25.1", features = ["derive"] }
image = "0.25.10"
pollster = "1.0.1"
wgpu = "30.0.0"
winit = "0.30.13"
